--- a/.obsidian/workspace
+++ b/.obsidian/workspace
@@ -4,12 +4,12 @@
     "type": "split",
     "children": [
       {
-        "id": "304888f3f8e24dff",
+        "id": "49ca207863366289",
         "type": "leaf",
         "state": {
           "type": "markdown",
           "state": {
-            "file": "notes/week2/1.md",
+            "file": "notes/week3/1.md",
             "mode": "source",
             "source": false
           }
@@ -77,7 +77,7 @@
             "state": {
               "type": "backlink",
               "state": {
-                "file": "notes/week2/1.md",
+                "file": "notes/week3/1.md",
                 "collapseAll": false,
                 "extraContext": false,
                 "sortOrder": "alphabetical",
@@ -94,7 +94,7 @@
             "state": {
               "type": "outgoing-link",
               "state": {
-                "file": "notes/week2/1.md",
+                "file": "notes/week3/1.md",
                 "linksCollapsed": false,
                 "unlinkedCollapsed": true
               }
@@ -117,7 +117,7 @@
             "state": {
               "type": "outline",
               "state": {
-                "file": "notes/week2/1.md"
+                "file": "notes/week3/1.md"
               }
             }
           }
@@ -128,6 +128,9 @@
     "width": 300,
     "collapsed": true
   },
-  "active": "304888f3f8e24dff",
-  "lastOpenFiles": []
+  "active": "49ca207863366289",
+  "lastOpenFiles": [
+    "notes/week3/1.md",
+    "notes/week2/1.md"
+  ]
 }
