Added a week3 note2

--- a/.obsidian/workspace
+++ b/.obsidian/workspace
@@ -9,7 +9,7 @@
         "state": {
           "type": "markdown",
           "state": {
-            "file": "notes/week3/1.md",
+            "file": "notes/week3/2.md",
             "mode": "source",
             "source": false
           }
@@ -77,7 +77,7 @@
             "state": {
               "type": "backlink",
               "state": {
-                "file": "notes/week3/1.md",
+                "file": "notes/week3/2.md",
                 "collapseAll": false,
                 "extraContext": false,
                 "sortOrder": "alphabetical",
@@ -94,7 +94,7 @@
             "state": {
               "type": "outgoing-link",
               "state": {
-                "file": "notes/week3/1.md",
+                "file": "notes/week3/2.md",
                 "linksCollapsed": false,
                 "unlinkedCollapsed": true
               }
@@ -117,7 +117,7 @@
             "state": {
               "type": "outline",
               "state": {
-                "file": "notes/week3/1.md"
+                "file": "notes/week3/2.md"
               }
             }
           }
@@ -131,6 +131,7 @@
   "active": "49ca207863366289",
   "lastOpenFiles": [
     "notes/week3/1.md",
+    "notes/week3/2.md",
     "notes/week2/1.md"
   ]
 }
