--- a/.obsidian/workspace
+++ b/.obsidian/workspace
@@ -4,7 +4,7 @@
     "type": "split",
     "children": [
       {
-        "id": "49ca207863366289",
+        "id": "a2ec4cedc67eeb3b",
         "type": "leaf",
         "state": {
           "type": "empty",
@@ -120,8 +120,12 @@
     "width": 300,
     "collapsed": true
   },
-  "active": "49ca207863366289",
+  "active": "a2ec4cedc67eeb3b",
   "lastOpenFiles": [
+    "notes/week1/1.md",
+    "notes/week2.decision.tree/1.md",
+    "notes/week3.geometric.learning/2.clustering.md",
+    "notes/week3.geometric.learning/1.geometric.learning.nearest.neighbors.md",
     "notes/week3/2.md",
     "notes/week3/1.md",
     "notes/week2/1.md"
