--- a/.obsidian/workspace
+++ b/.obsidian/workspace
@@ -4,11 +4,15 @@
     "type": "split",
     "children": [
       {
-        "id": "a2ec4cedc67eeb3b",
+        "id": "213c500c7f52c46a",
         "type": "leaf",
         "state": {
-          "type": "empty",
-          "state": {}
+          "type": "markdown",
+          "state": {
+            "file": "notes/week3.geometric.learning/2.clustering.md",
+            "mode": "source",
+            "source": false
+          }
         }
       }
     ],
@@ -73,6 +77,7 @@
             "state": {
               "type": "backlink",
               "state": {
+                "file": "notes/week3.geometric.learning/2.clustering.md",
                 "collapseAll": false,
                 "extraContext": false,
                 "sortOrder": "alphabetical",
@@ -89,6 +94,7 @@
             "state": {
               "type": "outgoing-link",
               "state": {
+                "file": "notes/week3.geometric.learning/2.clustering.md",
                 "linksCollapsed": false,
                 "unlinkedCollapsed": true
               }
@@ -110,7 +116,9 @@
             "type": "leaf",
             "state": {
               "type": "outline",
-              "state": {}
+              "state": {
+                "file": "notes/week3.geometric.learning/2.clustering.md"
+              }
             }
           }
         ]
@@ -120,12 +128,12 @@
     "width": 300,
     "collapsed": true
   },
-  "active": "a2ec4cedc67eeb3b",
+  "active": "213c500c7f52c46a",
   "lastOpenFiles": [
-    "notes/week1/1.md",
-    "notes/week2.decision.tree/1.md",
     "notes/week3.geometric.learning/2.clustering.md",
     "notes/week3.geometric.learning/1.geometric.learning.nearest.neighbors.md",
+    "notes/week1/1.md",
+    "notes/week2.decision.tree/1.md",
     "notes/week3/2.md",
     "notes/week3/1.md",
     "notes/week2/1.md"
