Added hw1 files.

--- a/.obsidian/workspace
+++ b/.obsidian/workspace
@@ -9,7 +9,7 @@
         "state": {
           "type": "markdown",
           "state": {
-            "file": "notes/week3.geometric.learning/2.clustering.md",
+            "file": "notes/week2.decision.tree/1.md",
             "mode": "source",
             "source": false
           }
@@ -77,7 +77,7 @@
             "state": {
               "type": "backlink",
               "state": {
-                "file": "notes/week3.geometric.learning/2.clustering.md",
+                "file": "notes/week2.decision.tree/1.md",
                 "collapseAll": false,
                 "extraContext": false,
                 "sortOrder": "alphabetical",
@@ -94,7 +94,7 @@
             "state": {
               "type": "outgoing-link",
               "state": {
-                "file": "notes/week3.geometric.learning/2.clustering.md",
+                "file": "notes/week2.decision.tree/1.md",
                 "linksCollapsed": false,
                 "unlinkedCollapsed": true
               }
@@ -117,7 +117,7 @@
             "state": {
               "type": "outline",
               "state": {
-                "file": "notes/week3.geometric.learning/2.clustering.md"
+                "file": "notes/week2.decision.tree/1.md"
               }
             }
           }
