--- a/.obsidian/app.json
+++ b/.obsidian/app.json
@@ -1,5 +1,6 @@
 {
   "vimMode": true,
   "showFrontmatter": false,
-  "showLineNumber": true
+  "showLineNumber": true,
+  "strictLineBreaks": false
 }
